Only translateX from the left to prevent being able to scroll horizontally on mobile. Fade in everything on home - person, skills, experience, accomplishments, posts and contact Fade in Blog

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -14,13 +14,15 @@
 }
 
 
-
+// Home
 #profile {
   animation: slide-from-left 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
 }
 
 #person-content {
-  animation: slide-from-right 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+  opacity: 0;
+  animation: fade-in 1s forwards;
+  animation-delay: 0.8s;
 }
 
 #person-interests {
@@ -32,5 +34,45 @@
 #person-education {
   opacity: 0;
   animation: fade-in 1s forwards;
-  animation-delay: 1.5s;
+  animation-delay: 1.2s;
+}
+
+#skills {
+  opacity: 0;
+  animation: fade-in 1s forwards;
+  animation-delay: 1.4s;
+}
+
+#experience {
+  opacity: 0;
+  animation: fade-in 1s forwards;
+  animation-delay: 1.6s;
+}
+
+#accomplishments {
+  opacity: 0;
+  animation: fade-in 1s forwards;
+  animation-delay: 1.8s
+}
+
+#posts {
+  opacity: 0;
+  animation: fade-in 1s forwards;
+  animation-delay: 2s;
+}
+
+#contact {
+  opacity: 0;
+  animation: fade-in 1s forwards;
+  animation-delay: 2.2s;
+}
+
+
+
+
+// Blog
+.page-body {
+  opacity: 0;
+  animation: fade-in 1s forwards;
+  animation-delay: 0.3s;
 }
